tests/baselines/reference/assignmentToParenthesizedIdentifiers.errors.txt
==== tests/cases/conformance/expressions/valuesAndReferences/assignmentToParenthesizedIdentifiers.ts (24 errors) ====
    var x: number;
    x = 3; // OK
    (x) = 3; // OK
    x = ''; // Error
    ~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
    (x) = ''; // Error
    ~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
    
    module M {
        export var y: number;
    }
    M.y = 3; // OK
    (M).y = 3; // OK
    (M.y) = 3; // OK
    M.y = ''; // Error
    ~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
    (M).y = ''; // Error
    ~~~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
    (M.y) = ''; // Error
    ~~~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
    
    M = { y: 3 }; // Error
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (M) = { y: 3 }; // Error
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    module M2 {
        export module M3 {
            export var x: number;
        }
    
        M3 = { x: 3 }; // Error
        ~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    }
    M2.M3 = { x: 3 }; // OK
    (M2).M3 = { x: 3 }; // OK
    (M2.M3) = { x: 3 }; // OK
    
    M2.M3 = { x: '' }; // Error
    ~~~~~
!!! error TS2322: Type '{ x: string; }' is not assignable to type 'typeof M3':
!!! error TS2322:   Types of property 'x' are incompatible:
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    (M2).M3 = { x: '' }; // Error
    ~~~~~~~
!!! error TS2322: Type '{ x: string; }' is not assignable to type 'typeof M3':
!!! error TS2322:   Types of property 'x' are incompatible:
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    (M2.M3) = { x: '' }; // Error
    ~~~~~~~
!!! error TS2322: Type '{ x: string; }' is not assignable to type 'typeof M3':
!!! error TS2322:   Types of property 'x' are incompatible:
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    
    
    function fn() { }
    fn = () => 3; // Bug 823548: Should be error (fn is not a reference)
    ~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (fn) = () => 3; // Should be error
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    function fn2(x: number, y: { t: number }) {
        x = 3;
        (x) = 3; // OK
        x = ''; // Error
        ~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
        (x) = ''; // Error
        ~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
    
        (y).t = 3; // OK
        (y.t) = 3; // OK
        (y).t = ''; // Error
        ~~~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
        (y.t) = ''; // Error
        ~~~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
    
        y['t'] = 3; // OK
        (y)['t'] = 3; // OK
        (y['t']) = 3; // OK
        y['t'] = ''; // Error
        ~~~~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
        (y)['t'] = ''; // Error
        ~~~~~~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
        (y['t']) = ''; // Error
        ~~~~~~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
    }
    
    enum E {
        A
    }
    E = undefined; // Error
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (E) = undefined; // Error
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    class C {
    
    }
    
    C = undefined; // Error
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (C) = undefined; // Error
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    